--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -8,6 +8,9 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template: 1fr 1fr 5fr 1fr / 1fr 3fr;
+  gap: 15px;
 }
 
 .container div {
@@ -26,15 +29,18 @@ body, html {
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1 / 2;
   grid-row: 2 / 4;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2 / 3;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / 3;
 }
 
 .article p {
